--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "^6.13.0",
+    "@prisma/adapter-pg": "^7.4.1",
+    "@prisma/client": "^7.4.1",
+    "@prisma/config": "^7.4.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -55,7 +57,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "pg": "^8.16.3",
-    "prisma": "latest",
+    "prisma": "^7.4.1",
     "react": "^18.0.0",
     "react-day-picker": "9.8.0",
     "react-dom": "^18.0.0",
@@ -71,6 +73,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
